--- a/gateway-service/package.json
+++ b/gateway-service/package.json
@@ -8,5 +8,18 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "express-jwt": "^8.4.1",
+    "http-proxy-middleware": "^3.0.0"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/express-jwt": "^7.4.2",
+    "@types/http-proxy-middleware": "^1.0.0",
+    "@types/node": "^20.12.4",
+    "typescript": "^5.4.4"
+  }
 }
