--- a/user-service/package.json
+++ b/user-service/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon src/app.ts",
+    "start": "nodemon app.ts",
     "build": "tsc",
     "serve": "node dist/app.js"
   },
