--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,8 @@
     "@tanstack/react-query": "^5.29.0",
     "next": "14.1.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-quill": "^2.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
